--- a/index.ipynb
+++ b/index.ipynb
@@ -51,9 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n",
+      "dlrow olleh\n",
+      "b'dlrow olleh'\n",
+      "38\n",
+      "b'&'\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "print(a[::-1]) # [5, 4, 3, 2, 1]\n",
@@ -79,9 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68656c6c6f20776f726c64\n",
+      "b'hello world'\n"
+     ]
+    }
+   ],
    "source": [
     "print(b'hello world'.hex())\n",
     "print(bytes.fromhex('68656c6c6f20776f726c64'))"
@@ -100,15 +121,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0\n"
+     ]
+    }
+   ],
    "source": [
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
     "\n",
     "# convert to binary (bytes.fromhex)\n",
+    "b = bytes.fromhex(h)\n",
+    "\n",
     "# reverse ([::-1])\n",
-    "# convert to hex()"
+    "l_endian = b[::-1]\n",
+    "\n",
+    "# convert to hex()\n",
+    "l_hex = l_endian.hex()\n",
+    "\n",
+    "print(l_hex)"
    ]
   },
   {
@@ -149,9 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "499602d2\n",
+      "d2029649\n",
+      "1234567890\n",
+      "1234567890\n"
+     ]
+    }
+   ],
    "source": [
     "n = 1234567890\n",
     "big_endian = n.to_bytes(4, 'big')\n",
@@ -178,15 +225,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\xed_\\x84\\x00'\n",
+      "73588229205\n"
+     ]
+    }
+   ],
    "source": [
     "n = 8675309\n",
     "# print n in 8 big endian bytes\n",
     "\n",
+    "big_endian = n.to_bytes(4, 'big')\n",
+    "little_endian = n.to_bytes(4, 'little')\n",
+    "print(little_endian)\n",
+    "\n",
     "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
-    "# print little endian in decimal"
+    "# print little endian in decimal\n",
+    "print(int.from_bytes(little_endian, 'big'))\n",
+    "\n"
    ]
   },
   {
@@ -200,22 +262,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def little_endian_to_int(b):\n",
     "    '''little_endian_to_int takes byte sequence as a little-endian number.\n",
     "    Returns an integer'''\n",
-    "    # use the from_bytes method of int\n",
-    "    pass\n",
+    "    return int.from_bytes(b)\n",
     "\n",
     "def int_to_little_endian(n, length):\n",
     "    '''endian_to_little_endian takes an integer and returns the little-endian\n",
     "    byte sequence of length'''\n",
-    "    # use the to_bytes method of n\n",
-    "    pass"
+    "    return n.to_bytes(length, 'little').hex()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -234,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
